# E-commerce

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  dependencies.py
app/api/v1/endpoints/: auth.py  orders.py  payments.py  products.py  users.py
app/api/v1/schemas/: __init__.py  auth.py  common.py  orders.py  products.py  users.py
app/core/: config.py  dependencies.py  exceptions.py  logging.py  security.py
app/domain/: __init__.py
app/domain/cart/: __init__.py  entities.py
app/domain/orders/: __init__.py  entities.py  repository.py  value_objects.py
app/domain/products/: __init__.py  entities.py  repository.py  value_objects.py
app/domain/shared/: __init__.py  entity.py  repository.py
app/domain/users/: __init__.py  entities.py  repository.py  value_objects.py
app/infrastructure/: __init__.py
app/infrastructure/repositories/: __init__.py  base_mongo_repository.py  order_repository.py  product_repository.py  user_repository.py
app/middleware/: __init__.py  correlation_id.py  error_handler.py  logging_middleware.py
app/services/: __init__.py  auth_service.py  order_service.py  payment_service.py  product_service.py  user_service.py
scripts/: mongo-init.js
tests/: __init__.py  conftest.py  test_auth.py  test_products.py
