[tool.poetry]
name = "Skycart-backend"
version = "2.0.0"
description = "SkyCart E-Commerce Backend API with Clean Architecture"
authors = ["SkyCart Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
motor = "^3.3.2"
pymongo = "^4.6.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.1.2"
python-multipart = "^0.0.6"
aiofiles = "^23.2.1"
httpx = "^0.26.0"
aiokafka = "^0.10.0"
aiosmtplib = "^3.0.1"
stripe = "^8.0.0"
email-validator = "^2.1.0"
structlog = "^24.1.0"
redis = "^5.0.1"
aiohttp = "^3.9.1"
Pillow = "^10.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"
black = "^24.1.0"
ruff = "^0.1.14"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "aiohttp==3.9.1",
    "aiokafka==0.10.0",
    "aioredis==2.0.1",
    "aiosmtplib==3.0.1",
    "black==23.12.1",
    "email-validator==2.1.0",
    "faker==22.2.0",
    "fastapi==0.109.0",
    "flake8==7.0.0",
    "httpx==0.26.0",
    "isort==5.13.2",
    "motor==3.3.2",
    "mypy==1.8.0",
    "passlib[argon2,bcrypt]==1.7.4",
    "pillow==10.2.0",
    "pre-commit==3.6.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "pymongo==4.6.1",
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    "python-jose[cryptography]==3.3.0",
    "python-json-logger==2.0.7",
    "python-magic==0.4.27",
    "python-multipart==0.0.6",
    "redis==5.0.1",
    "stripe==7.10.0",
    "structlog==24.1.0",
    "uvicorn[standard]==0.27.0",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
